--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
+    "heroku-postbuild": "ng build",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -25,6 +26,7 @@
     "express": "^4.18.2",
     "https-browserify": "^1.0.0",
     "nodemailer": "^6.9.3",
+    "path": "^0.12.7",
     "path-browserify": "^1.0.1",
     "rxjs": "~7.8.0",
     "stream-browserify": "^3.0.0",
